deployment/apps/api-core/service.yaml
#This is an auto generated file
kind: Service
apiVersion: v1
metadata:
  name: api-core
  namespace: preview
spec:
  # type: NodePort
  selector:
    app: api-core
  ports:
  - name: http
    port: 9089
  #   - protocol: TCP
  #     port: 9089
  #     targetPort: 9089
  #     name: api-core
